make the alignment of home page correctly

--- a/client/src/Pages/Home/Navigation/Nav.css
+++ b/client/src/Pages/Home/Navigation/Nav.css
@@ -1,11 +1,14 @@
 nav {
-  display: flex;
-  border-bottom: 2px solid #f3f3f3;
-  justify-content: space-around;
-  align-items: center;
-  padding: 20px;
-  margin-left: 2rem;
-  position: relative;
+       display: flex;
+    border-bottom: 2px solid #f3f3f3;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    height: 10%;
+    top: 0;
 }
 
 .search-input {
