--- a/client/src/Pages/Home/Sidebar/Category.css
+++ b/client/src/Pages/Home/Sidebar/Category.css
@@ -1,12 +1,11 @@
 .main-category-container{
     display: block;
-    /* flex-direction: column; */
-    /* align-items: center; */
     height: 100%;
     width: 15%;
-    position: fixed;
-   
     
+    position: fixed;
+    padding-top: 6%;
+    padding-left: 2%;
 }
 .category-container{
     display: grid;
