--- a/client/src/Pages/Home/components/preview-style.css
+++ b/client/src/Pages/Home/components/preview-style.css
@@ -28,6 +28,8 @@
     left: 50%; /* Center horizontally */
     transform: translate(-50%, -50%); 
     padding: 1% 3% 2% 1%;
+    border: 3px solid rgb(98, 195, 255);
+    box-shadow: 5px 5px 10px rgb(99, 171, 253);
 }
 
 .preview-image{
@@ -41,10 +43,9 @@
   color: red;
 }
 .preview-image img {
-  
       height: 150px;
-    padding-left: 19px;
-
+    padding-right: 10%;
+    justify-self: center;
 }
 .preview-right{
   display: grid;
